--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,8 +1,10 @@
 {
+  "no": "Ne",
+  "yes": "Ano",
   "aboutFarm": "O Farmě",
   "address": "Adresa",
   "addressLine1": "Ulice a číslo popisné",
-  "areYouSure": "Jste si jistý?",
+  "deleteDialog.text": "Smazat vybranou položku?",
   "boxEditor.heading": "Bedýnka",
   "boxEditor.namePlaceholder": "Např. Velká zeleninová",
   "boxEditor.numberOfBoxes": "Počet bedýnek",
@@ -20,7 +22,7 @@
   "delete": "Smazat",
   "email": "Email",
   "exampleFarmAlert": "Tato farma není skutečná, jedná se o ilustraci.",
-  "exampleFarmFarmerModeAlert": "Ilustrativní farma z pohledu farmáře. Nelze editovat.",
+  "exampleFarmFarmerModeAlert": "Ilustrativní farma z pohledu farmáře.",
   "farm": "Farma",
   "farmForm.isPickupPoint": "Odběry ze dvora",
   "farmForm.makeFarmPublic": "Zveřejnit farmu",
@@ -64,7 +66,7 @@
   "pickupPointsPage.pickupDay": "Odběrový den",
   "pickupPointsPage.pickupDayPlaceholder": "Např. Týdně/Ob týden ve čtvrtek od 10 do 16 hodin. Nebo dle domluvy.",
   "postcode": "PSČ",
-  "priceList": "Ceník",
+  "boxesTable.priceHeading": "Množství x Cena ({{currency}})",
   "producing": "Produkujeme",
   "productTypes.dairy": "Mléčné výrobky",
   "productTypes.eggs": "Vejce",
