--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -2,7 +2,7 @@
   "aboutFarm": "About Farm",
   "address": "Address",
   "addressLine1": "Street and house number",
-  "areYouSure": "Are you sure?",
+  "deleteDialog.text": "Delete selected item?",
   "boxEditor.heading": "Box",
   "boxEditor.namePlaceholder": "Eg. Vegetables for 4",
   "boxEditor.numberOfBoxes": "Number of boxes",
@@ -13,14 +13,14 @@
   "contacts": "Contacts",
   "continue": "Continue",
   "createFarm": "Create Farm",
-  "csaPage.about": "Community Supported Agriculute is a concept, which is among other things trying to connect a consumer directly with the producer (farmer). One method to achieve this, is to subscribe to boxes of products (shares). Most common is a weekly subscription with handover on agreed pickup point. In general the more boxes you prepay the lower the price per box.",
+  "csaPage.about": "Community Supported Agriculture is a concept, which is among other things, trying to connect a consumer directly with a farmer. One method to achieve this, is to subscribe to boxes of produce (shares). Most common is a weekly subscription with handover on agreed pickup point. In general the more boxes you prepay the lower the price per box.",
   "csaPage.boxContentHeading": "(Possible) content",
   "csaPage.boxContentPlaceholder": "Beetroot, Carrots, Lettuce, Potatoes, Onions...",
   "csaPage.boxName": "\"Box\" name",
   "delete": "Delete",
   "email": "Email",
   "exampleFarmAlert": "This farm is for illustrative purposes only.",
-  "exampleFarmFarmerModeAlert": "Illustrative farm from farmer's view. Cannot be edited.",
+  "exampleFarmFarmerModeAlert": "Illustrative farm from farmer's view.",
   "farm": "Farm",
   "farmForm.isPickupPoint": "Use farm as pickup point",
   "farmForm.makeFarmPublic": "Make farm public",
@@ -52,6 +52,8 @@
   "lastName": "Last name",
   "myFarm": "My Farm",
   "name": "Name",
+  "no": "No",
+  "yes": "Yes",
   "option": "Option",
   "orders": "Orders",
   "password": "Password",
@@ -64,7 +66,7 @@
   "pickupPointsPage.pickupDay": "Pickup day",
   "pickupPointsPage.pickupDayPlaceholder": "Eg. Weekly/Biweekly on Wednesday from 10am to 4pm. Or by agreement.",
   "postcode": "Postcode",
-  "priceList": "Price list",
+  "boxesTable.priceHeading": "Quantity x Price ({{currency}})",
   "producing": "Producing",
   "productTypes.dairy": "Dairy",
   "productTypes.eggs": "Eggs",
