--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,22 +1,22 @@
 {
+  "landingPage.contactDeveloper": "Or contact the developer",
   "aboutFarm": "About Farm",
   "address": "Address",
   "addressLine1": "Street and house number",
   "deleteDialog.text": "Delete selected item?",
-  "boxEditor.heading": "Box",
+  "boxEditor.heading": "Subscription Editor",
   "boxEditor.namePlaceholder": "Eg. Vegetables for 4",
-  "boxEditor.numberOfBoxes": "Number of boxes",
-  "boxEditor.pricePerBox": "Price per box ($)",
-  "boxes": "Boxes",
+  "boxEditor.numberOfBoxes": "Number of shares",
+  "boxEditor.pricePerBox": "Price per share ({{currency}})",
   "cancel": "Cancel",
   "city": "City",
   "contacts": "Contacts",
   "continue": "Continue",
   "createFarm": "Create Farm",
-  "csaPage.about": "Community Supported Agriculture is a concept, which is among other things, trying to connect a consumer directly with a farmer. One method to achieve this, is to subscribe to boxes of produce (shares). Most common is a weekly subscription with handover on agreed pickup point. In general the more boxes you prepay the lower the price per box.",
+  "csaPage.about": "Community Supported Agriculture is a concept, which is, among other things, trying to connect a consumer directly with a farmer. One method to achieve this, is to subscribe to shares of produce (boxes). Most common is a weekly subscription with handover on agreed pickup point. In general the more shares you prepay the lower the price per share.",
   "csaPage.boxContentHeading": "(Possible) content",
   "csaPage.boxContentPlaceholder": "Beetroot, Carrots, Lettuce, Potatoes, Onions...",
-  "csaPage.boxName": "\"Box\" name",
+  "csaPage.boxName": "Subscription name",
   "delete": "Delete",
   "email": "Email",
   "exampleFarmAlert": "This farm is for illustrative purposes only.",
@@ -27,7 +27,7 @@
   "farmName": "Farm name",
   "farmPage.accommodation": "Accommodation",
   "farmPage.blog": "Blog",
-  "farmPage.csa": "CSA - Boxes",
+  "farmPage.csa": "CSA - Subscriptions",
   "farmPage.eshop": "Eshop",
   "farmPage.farmIsNotPublishedAlert": "Your farm is not publicly available. You can change it in farm settings.",
   "farmPage.openWebPage": "Open web page",
