--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,24 +1,24 @@
 {
+  "landingPage.contactDeveloper": "Nebo kontaktuje vývojáře",
   "no": "Ne",
   "yes": "Ano",
   "aboutFarm": "O Farmě",
   "address": "Adresa",
   "addressLine1": "Ulice a číslo popisné",
   "deleteDialog.text": "Smazat vybranou položku?",
-  "boxEditor.heading": "Bedýnka",
-  "boxEditor.namePlaceholder": "Např. Velká zeleninová",
-  "boxEditor.numberOfBoxes": "Počet bedýnek",
-  "boxEditor.pricePerBox": "Cena za kus (Kč)",
-  "boxes": "Bedýnky",
+  "boxEditor.heading": "Editor Odběru",
+  "boxEditor.namePlaceholder": "Např. Velká zeleninová bedýnka",
+  "boxEditor.numberOfBoxes": "Počet odběrů",
+  "boxEditor.pricePerBox": "Cena za odběr ({{currency}})",
   "cancel": "Zrušit",
   "city": "Město",
   "contacts": "Kontakty",
   "continue": "Pokračovat",
   "createFarm": "Založ Farmu",
-  "csaPage.about": "Komunitou Podporované Zemědělství je koncept, který se mimo jiné snaží propojit spotřebitele přímo s producentem (farmářem). Jeden ze způsobů, kterým se toho snaží dosáhnout, je tak zvaný \"odběr bedýnek\" (podílů). Bedýnky se nejčastěji odebírají jednou za týden, na předem domluveném odběrovém místě a obecně platí, že čím více bedýnek si předplatíte, tím nižší cena bedýnky.",
+  "csaPage.about": "Komunitou Podporované Zemědělství je koncept, který se mimo jiné snaží propojit konzumenta přímo s farmářem. Jeden ze způsobů, kterým se toho snaží dosáhnout, je tzv. \"odběr podílů (bedýnek)\". Podíly se nejčastěji odebírají jednou za týden, na předem domluveném odběrovém místě. Obecně platí, že čím více podílů si předplatíte, tím nižší cena za podíl.",
   "csaPage.boxContentHeading": "(Možný) obsah",
   "csaPage.boxContentPlaceholder": "Brambory, Cibule, Mrkve, Řepa, Salát...",
-  "csaPage.boxName": "Jméno \"bedýnky\"",
+  "csaPage.boxName": "Jméno odběru",
   "delete": "Smazat",
   "email": "Email",
   "exampleFarmAlert": "Tato farma není skutečná, jedná se o ilustraci.",
@@ -29,7 +29,7 @@
   "farmName": "Jméno farmy",
   "farmPage.accommodation": "Ubytování",
   "farmPage.blog": "Blog",
-  "farmPage.csa": "KPZ - Bedýnky",
+  "farmPage.csa": "KPZ - Odběry",
   "farmPage.eshop": "Eshop",
   "farmPage.farmIsNotPublishedAlert": "Vaše farma není veřejně dostupná. Změnu lze provést v nastavení farmy.",
   "farmPage.openWebPage": "Otevřít stránku",
