--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -13,13 +13,15 @@
   "contacts": "Contacts",
   "continue": "Continue",
   "createFarm": "Create Farm",
-  "csaPage.about": "Community Supported Agriculture is a concept, which is, among other things, trying to connect a consumer directly with a farmer. One method to achieve this, is to subscribe to shares of produce (boxes). Most common is a weekly subscription with handover on agreed pickup point. In general the more shares you prepay the lower the price per share.",
+  "csaPage.about": "Community Supported Agriculture is a concept, which is among other things, trying to connect a consumer directly with a farmer. One method to achieve this, is to subscribe to shares of farm produce (boxes). Most common is a weekly subscription with handover on agreed pickup point. In general the more shares you prepay the lower the price per share.",
+  "csaPage.about2": "Below you can see farm's subscription offerings, choose a pickup point in Pickup Points section and in case of interest contact the farmer through one of the contacts listed in Farm section.",
+  "csaPage.aboutš": "Níže si můžete prohlédnout nabídku odběrů, v sekci Odběrová Místa si vybrat odběrové místo a v případě zájmu kontaktovat farmáře na jeden z kontaktů uvedených v sekci Farma.",
   "csaPage.boxContentHeading": "(Possible) content",
   "csaPage.boxContentPlaceholder": "Beetroot, Carrots, Lettuce, Potatoes, Onions...",
   "csaPage.boxName": "Subscription name",
   "delete": "Delete",
   "email": "Email",
-  "exampleFarmAlert": "This farm is for illustrative purposes only.",
+  "exampleFarmAlert": "This farm is not real it's for illustrative purposes only.",
   "exampleFarmFarmerModeAlert": "Illustrative farm from farmer's view.",
   "farm": "Farm",
   "farmForm.isPickupPoint": "Use farm as pickup point",
@@ -41,7 +43,7 @@
   "farmsTable.producingHeading": "Producing",
   "firstName": "First name",
   "genericFailureMessage": "Something's wrong. Please try again later.",
-  "landingPage.farmerMode": "(Farmer mode)",
+  "landingPage.farmerMode": "(Farmer's view)",
   "landingPage.heading": "Community Supported Agriculture",
   "landingPage.or": "or",
   "landingPage.showExampleFarm": "Show Example Farm",
@@ -66,7 +68,7 @@
   "pickupPointsPage.pickupDay": "Pickup day",
   "pickupPointsPage.pickupDayPlaceholder": "Eg. Weekly/Biweekly on Wednesday from 10am to 4pm. Or by agreement.",
   "postcode": "Postcode",
-  "boxesTable.priceHeading": "Quantity x Price ({{currency}})",
+  "boxesTable.priceHeading": "Shares x Price ({{currency}})",
   "producing": "Producing",
   "productTypes.dairy": "Dairy",
   "productTypes.eggs": "Eggs",
