--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -15,7 +15,8 @@
   "contacts": "Kontakty",
   "continue": "Pokračovat",
   "createFarm": "Založ Farmu",
-  "csaPage.about": "Komunitou Podporované Zemědělství je koncept, který se mimo jiné snaží propojit konzumenta přímo s farmářem. Jeden ze způsobů, kterým se toho snaží dosáhnout, je tzv. \"odběr podílů (bedýnek)\". Podíly se nejčastěji odebírají jednou za týden, na předem domluveném odběrovém místě. Obecně platí, že čím více podílů si předplatíte, tím nižší cena za podíl.",
+  "csaPage.about": "Komunitou Podporované Zemědělství je koncept, který se mimo jiné snaží propojit spotřebitele přímo s farmářem. Jeden ze způsobů kterým toho dosáhnout, je odebírání podílů produkce farmy (bedýnek). Podíly se nejčastěji odebírají jednou za týden, na předem domluveném odběrovém místě. Obecně platí, že čím více podílů si předplatíte, tím nižší cena za podíl.",
+  "csaPage.about2": "Níže si můžete prohlédnout nabídku odběrů, v sekci Odběrová Místa si vybrat odběrové místo a v případě zájmu kontaktovat farmáře na jeden z kontaktů uvedených v sekci Farma.",
   "csaPage.boxContentHeading": "(Možný) obsah",
   "csaPage.boxContentPlaceholder": "Brambory, Cibule, Mrkve, Řepa, Salát...",
   "csaPage.boxName": "Jméno odběru",
@@ -66,7 +67,7 @@
   "pickupPointsPage.pickupDay": "Odběrový den",
   "pickupPointsPage.pickupDayPlaceholder": "Např. Týdně/Ob týden ve čtvrtek od 10 do 16 hodin. Nebo dle domluvy.",
   "postcode": "PSČ",
-  "boxesTable.priceHeading": "Množství x Cena ({{currency}})",
+  "boxesTable.priceHeading": "Počet odběrů x Cena ({{currency}})",
   "producing": "Produkujeme",
   "productTypes.dairy": "Mléčné výrobky",
   "productTypes.eggs": "Vejce",
