--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -7,20 +7,20 @@
   "address": "Adresa",
   "addressLine1": "Ulice a číslo popisné",
   "deleteDialog.text": "Smazat vybranou položku?",
-  "boxEditor.heading": "Editor Odběru",
-  "boxEditor.namePlaceholder": "Např. Velká zeleninová bedýnka",
-  "boxEditor.numberOfBoxes": "Od počtu odběrů",
-  "boxEditor.pricePerBox": "Cena za odběr ({{currency}})",
+  "subscriptionEditor.heading": "Editor Odběru",
+  "subscriptionEditor.namePlaceholder": "Např. Velká zeleninová bedýnka",
+  "subscriptionEditor.numberOfDeliveries": "Od počtu odběrů",
+  "subscriptionEditor.pricePerDelivery": "Cena za odběr ({{currency}})",
   "cancel": "Zrušit",
   "city": "Město",
   "contacts": "Kontakty",
   "continue": "Pokračovat",
   "createFarm": "Založ Farmu",
-  "csaPage.about": "Komunitou Podporované Zemědělství je koncept, který se mimo jiné snaží propojit spotřebitele přímo s farmářem. Jeden ze způsobů kterým toho dosáhnout, je odebírání podílů produkce farmy (bedýnek). Podíly se nejčastěji odebírají jednou za týden, na předem domluveném odběrovém místě. Obecně platí, že čím více podílů si předplatíte, tím nižší cena za podíl.",
-  "csaPage.about2": "Níže si můžete prohlédnout nabídku odběrů, v sekci Odběrová Místa si vybrat odběrové místo a v případě zájmu kontaktovat farmáře na jeden z kontaktů uvedených v sekci Farma.",
-  "csaPage.boxContentHeading": "(Možný) obsah",
-  "csaPage.boxContentPlaceholder": "Brambory, Cibule, Mrkve, Řepa, Salát...",
-  "csaPage.boxName": "Jméno odběru",
+  "subscriptionsPage.about": "Komunitou Podporované Zemědělství je koncept, který se mimo jiné snaží propojit spotřebitele přímo s farmářem. Jeden ze způsobů kterým toho dosáhnout, je odebírání podílů produkce farmy (bedýnek). Podíly se nejčastěji odebírají jednou za týden, na předem domluveném odběrovém místě. Obecně platí, že čím více podílů si předplatíte, tím nižší cena za podíl.",
+  "subscriptionsPage.about2": "Níže si můžete prohlédnout nabídku odběrů, v sekci Odběrová Místa si vybrat odběrové místo a v případě zájmu kontaktovat farmáře na jeden z kontaktů uvedených v sekci Farma.",
+  "subscriptionsPage.subscriptionContentHeading": "(Možný) obsah",
+  "subscriptionsPage.subscriptionContentPlaceholder": "Brambory, Cibule, Mrkve, Řepa, Salát...",
+  "subscriptionsPage.subscriptionName": "Jméno odběru",
   "delete": "Smazat",
   "email": "Email",
   "exampleFarmAlert": "Tato farma není skutečná, jedná se o ilustraci.",
@@ -31,7 +31,7 @@
   "farmName": "Jméno farmy",
   "farmPage.accommodation": "Ubytování",
   "farmPage.blog": "Blog",
-  "farmPage.csa": "KPZ - Odběry",
+  "farmPage.subscriptions": "Odběry",
   "farmPage.eshop": "Eshop",
   "farmPage.farmIsNotPublishedAlert": "Vaše farma není veřejně dostupná. Změnu lze provést v nastavení farmy.",
   "farmPage.openWebPage": "Otevřít stránku",
@@ -67,7 +67,7 @@
   "pickupPointsPage.pickupDay": "Odběrový den",
   "pickupPointsPage.pickupDayPlaceholder": "Např. Týdně/Ob týden ve čtvrtek od 10 do 16 hodin. Nebo dle domluvy.",
   "postcode": "PSČ",
-  "boxesTable.priceHeading": "Počet odběrů x Cena ({{currency}})",
+  "subscriptionsTable.priceHeading": "Počet odběrů x Cena ({{currency}})",
   "producing": "Produkujeme",
   "productTypes.dairy": "Mléčné výrobky",
   "productTypes.eggs": "Vejce",
