--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -5,21 +5,20 @@
   "address": "Address",
   "addressLine1": "Street and house number",
   "deleteDialog.text": "Delete selected item?",
-  "boxEditor.heading": "Subscription Editor",
-  "boxEditor.namePlaceholder": "Eg. Vegetables for 4",
-  "boxEditor.numberOfBoxes": "From number of shares",
-  "boxEditor.pricePerBox": "Price per share ({{currency}})",
+  "subscriptionEditor.heading": "Subscription Editor",
+  "subscriptionEditor.namePlaceholder": "Eg. Vegetables for 4",
+  "subscriptionEditor.numberOfDeliveries": "From number of deliveries",
+  "subscriptionEditor.pricePerDelivery": "Price per share ({{currency}})",
   "cancel": "Cancel",
   "city": "City",
   "contacts": "Contacts",
   "continue": "Continue",
   "createFarm": "Create Farm",
-  "csaPage.about": "Community Supported Agriculture is a concept, which is among other things, trying to connect a consumer directly with a farmer. One method to achieve this, is to subscribe to shares of farm produce (boxes). Most common is a weekly subscription with handover on agreed pickup point. In general the more shares you prepay the lower the price per share.",
-  "csaPage.about2": "Below you can see farm's subscription offerings, choose a pickup point in Pickup Points section and in case of interest contact the farmer through one of the contacts listed in Farm section.",
-  "csaPage.aboutš": "Níže si můžete prohlédnout nabídku odběrů, v sekci Odběrová Místa si vybrat odběrové místo a v případě zájmu kontaktovat farmáře na jeden z kontaktů uvedených v sekci Farma.",
-  "csaPage.boxContentHeading": "(Possible) content",
-  "csaPage.boxContentPlaceholder": "Beetroot, Carrots, Lettuce, Potatoes, Onions...",
-  "csaPage.boxName": "Subscription name",
+  "subscriptionsPage.about": "Community Supported Agriculture is a concept, which is among other things, trying to connect a consumer directly with a farmer. One method to achieve this, is to subscribe to shares of farm produce (subscriptions). Most common is a weekly subscription with handover on agreed pickup point. In general the more shares you prepay the lower the price per share.",
+  "subscriptionsPage.about2": "Below you can see farm's subscription offerings, choose a pickup point in Pickup Points section and in case of interest contact the farmer through one of the contacts listed in Farm section.",
+  "subscriptionsPage.subscriptionContentHeading": "(Possible) content",
+  "subscriptionsPage.subscriptionContentPlaceholder": "Beetroot, Carrots, Lettuce, Potatoes, Onions...",
+  "subscriptionsPage.subscriptionName": "Subscription name",
   "delete": "Delete",
   "email": "Email",
   "exampleFarmAlert": "This farm is not real it's for illustrative purposes only.",
@@ -30,7 +29,7 @@
   "farmName": "Farm name",
   "farmPage.accommodation": "Accommodation",
   "farmPage.blog": "Blog",
-  "farmPage.csa": "CSA - Subscriptions",
+  "farmPage.subscriptions": "Subscriptions",
   "farmPage.eshop": "Eshop",
   "farmPage.farmIsNotPublishedAlert": "Your farm is not publicly available. You can change it in farm settings.",
   "farmPage.openWebPage": "Open web page",
@@ -68,7 +67,7 @@
   "pickupPointsPage.pickupDay": "Pickup day",
   "pickupPointsPage.pickupDayPlaceholder": "Eg. Weekly/Biweekly on Wednesday from 10am to 4pm. Or by agreement.",
   "postcode": "Postcode",
-  "boxesTable.priceHeading": "Shares x Price ({{currency}})",
+  "subscriptionsTable.priceHeading": "Shares x Price ({{currency}})",
   "producing": "Producing",
   "productTypes.dairy": "Dairy",
   "productTypes.eggs": "Eggs",
