--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -8,13 +8,13 @@
   "subscriptionEditor.heading": "Subscription Editor",
   "subscriptionEditor.namePlaceholder": "Eg. Vegetables for 4",
   "subscriptionEditor.numberOfDeliveries": "From number of deliveries",
-  "subscriptionEditor.pricePerDelivery": "Price per share ({{currency}})",
+  "subscriptionEditor.pricePerDelivery": "Price per delivery ({{currency}})",
   "cancel": "Cancel",
   "city": "City",
   "contacts": "Contacts",
   "continue": "Continue",
   "createFarm": "Create Farm",
-  "subscriptionsPage.about": "Community Supported Agriculture is a concept, which is among other things, trying to connect a consumer directly with a farmer. One method to achieve this, is to subscribe to shares of farm produce (subscriptions). Most common is a weekly subscription with handover on agreed pickup point. In general the more shares you prepay the lower the price per share.",
+  "subscriptionsPage.about": "Community Supported Agriculture is a concept, which is among other things, trying to connect a consumer directly with a farmer. One method to achieve this, is to subscribe to deliveries of farm produce (subscriptions). Most common is a weekly subscription with handover on agreed pickup point. In general the more deliveries you prepay the lower the price per delivery.",
   "subscriptionsPage.about2": "Below you can see farm's subscription offerings, choose a pickup point in Pickup Points section and in case of interest contact the farmer through one of the contacts listed in Farm section.",
   "subscriptionsPage.subscriptionContentHeading": "(Possible) content",
   "subscriptionsPage.subscriptionContentPlaceholder": "Beetroot, Carrots, Lettuce, Potatoes, Onions...",
