update price list

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -44,9 +44,7 @@
   "farmsTable.producingHeading": "Produkuje",
   "firstName": "Jméno",
   "genericFailureMessage": "Něco se porouchalo. Zkuste opakovat akci později.",
-  "landingPage.farmerMode": "(Z pohledu farmáře)",
   "landingPage.heading": "Komunitou Podporované Zemědělství",
-  "landingPage.showExampleFarm": "Zobraz Ukázku Farmy",
   "landingPage.subHeading": "Lokální produkty od lokálních farmářů",
   "landingPage.subscribeToNewsletter": "Přidej se",
   "landingPage.workInProgress": "Na stránce se pracuje",
@@ -65,7 +63,7 @@
   "pickupPointsPage.pickupDay": "Odběrový den",
   "pickupPointsPage.pickupDayPlaceholder": "Např. Týdně/Ob týden ve čtvrtek od 10 do 16 hodin. Nebo dle domluvy.",
   "postcode": "PSČ",
-  "subscriptionsTable.priceHeading": "Počet odběrů x Cena ({{currency}})",
+  "subscriptionsTable.priceHeading": "Počet odběrů x Cena",
   "producing": "Produkujeme",
   "productTypes.dairy": "Mléčné výrobky",
   "productTypes.eggs": "Vejce",
