--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -42,9 +42,7 @@
   "farmsTable.producingHeading": "Producing",
   "firstName": "First name",
   "genericFailureMessage": "Something's wrong. Please try again later.",
-  "landingPage.farmerMode": "(Farmer's view)",
   "landingPage.heading": "Community Supported Agriculture",
-  "landingPage.showExampleFarm": "Show Example Farm",
   "landingPage.subHeading": "Local products from local farmers",
   "landingPage.subscribeToNewsletter": "Subscribe",
   "landingPage.workInProgress": "Site is under construction",
@@ -65,7 +63,7 @@
   "pickupPointsPage.pickupDay": "Pickup day",
   "pickupPointsPage.pickupDayPlaceholder": "Eg. Weekly/Biweekly on Wednesday from 10am to 4pm. Or by agreement.",
   "postcode": "Postcode",
-  "subscriptionsTable.priceHeading": "Deliveries x Price ({{currency}})",
+  "subscriptionsTable.priceHeading": "Deliveries x Price",
   "producing": "Producing",
   "productTypes.dairy": "Dairy",
   "productTypes.eggs": "Eggs",
