refactor landing page

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -44,8 +44,11 @@
   "farmsTable.producingHeading": "Produkuje",
   "firstName": "Jméno",
   "genericFailureMessage": "Něco se porouchalo. Zkuste opakovat akci později.",
-  "landingPage.heading": "Komunitou Podporované Zemědělství",
-  "landingPage.subHeading": "Lokální produkty od lokálních farmářů",
+  "landingPage.heading": "Lokální produkty přímo z farmy",
+  "landingPage.howItWorks1": "Najdi farmu dle odběrového místa",
+  "landingPage.howItWorks2": "Vyber produkty k odběru",
+  "landingPage.howItWorks3": "Čím více předplatíš tím více ušetříš",
+  "landingPage.howItWorks4": "Pravidelně vyzvedávej své odběry",
   "landingPage.subscribeToNewsletter": "Přidej se",
   "landingPage.workInProgress": "Na stránce se pracuje",
   "landingPage.workInProgress2": "budeme vás informovat co je nového.",
