--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -42,8 +42,11 @@
   "farmsTable.producingHeading": "Producing",
   "firstName": "First name",
   "genericFailureMessage": "Something's wrong. Please try again later.",
-  "landingPage.heading": "Community Supported Agriculture",
-  "landingPage.subHeading": "Local products from local farmers",
+  "landingPage.heading": "Local produce directly from a farm",
+  "landingPage.howItWorks1": "Find farm by pickup point",
+  "landingPage.howItWorks2": "Select farm produce subscription",
+  "landingPage.howItWorks3": "The more you prepay the more you save",
+  "landingPage.howItWorks4": "Pick up regular deliveries",
   "landingPage.subscribeToNewsletter": "Subscribe",
   "landingPage.workInProgress": "Site is under construction",
   "landingPage.workInProgress2": "subscribe to be updated what's new.",
