implement filtering farms by zip

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,4 +1,5 @@
 {
+  "addressLevel1Label": "Okres", 
   "pricing": "Ceník",
   "landingPage.contactDeveloper": "Nebo kontaktuje vývojáře",
   "no": "Ne",
@@ -40,7 +41,8 @@
   "farmPage.switchToViewMode": "Náhled", 
   "farmPage.volunteers": "Dobrovolníci",
   "farmsPage.heading": "Najdi Farmu",
-  "farmsTable.deliversToHeading": "Odběrová místa v",
+  "farmsPage.deliversToHeading": "Odběrová místa v",
+  "farmsTable.deliversToPlaceholder": "Město / PSČ",
   "farmsTable.producingHeading": "Produkuje",
   "firstName": "Jméno",
   "genericFailureMessage": "Něco se porouchalo. Zkuste opakovat akci později.",
@@ -59,12 +61,12 @@
   "password": "Heslo",
   "pc": "ks",
   "phoneNumber": "Telefonní číslo",
-  "pickupPointEditor.heading": "Odběrový bod",
+  "pickupPointEditor.heading": "Odběrové místo",
   "pickupPoints": "Odběrová Místa",
   "pickupPointsPage.editDelete": "Editovat/Smazat",
-  "pickupPointsPage.farmPickupDay": "Dle domluvy",
-  "pickupPointsPage.pickupDay": "Odběrový den",
-  "pickupPointsPage.pickupDayPlaceholder": "Např. Týdně/Ob týden ve čtvrtek od 10 do 16 hodin. Nebo dle domluvy.",
+  "farmPickupDayDefaultValue": "Dle domluvy",
+  "pickupDayLabel": "Odběrový den",
+  "pickupDayPlaceholder": "Týdně/Ob týden ve čtvrtek od 10 do 16 hodin.",
   "postcode": "PSČ",
   "subscriptionsTable.priceHeading": "Počet odběrů x Cena",
   "producing": "Produkujeme",
