--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "addressLevel1Label": "State / Province / District", 
   "pricing": "Pricing",
   "landingPage.contactDeveloper": "Or contact the developer",
   "aboutFarm": "About Farm",
@@ -38,7 +39,8 @@
   "farmPage.switchToViewMode": "View", 
   "farmPage.volunteers": "Volunteers",
   "farmsPage.heading": "Find Farm",
-  "farmsTable.deliversToHeading": "Pickup points in",
+  "farmsPage.deliversToHeading": "Pickup points in",
+  "farmsTable.deliversToPlaceholder": "City / Postcode",
   "farmsTable.producingHeading": "Producing",
   "firstName": "First name",
   "genericFailureMessage": "Something's wrong. Please try again later.",
@@ -62,9 +64,9 @@
   "pickupPointEditor.heading": "Pickup Point",
   "pickupPoints": "Pickup Points",
   "pickupPointsPage.editDelete": "Edit/Delete",
-  "pickupPointsPage.farmPickupDay": "By agreement.",
-  "pickupPointsPage.pickupDay": "Pickup day",
-  "pickupPointsPage.pickupDayPlaceholder": "Eg. Weekly/Biweekly on Wednesday from 10am to 4pm. Or by agreement.",
+  "farmPickupDayDefaultValue": "By agreement.",
+  "pickupDayLabel": "Pickup day",
+  "pickupDayPlaceholder": "Weekly/Biweekly on Wednesday from 10am to 4pm.",
   "postcode": "Postcode",
   "subscriptionsTable.priceHeading": "Deliveries x Price",
   "producing": "Producing",
