add placeholders to subscription editor

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -10,7 +10,7 @@
   "addressLine1": "Ulice a číslo popisné",
   "deleteDialog.text": "Smazat vybranou položku?",
   "subscriptionEditor.heading": "Editor Odběru",
-  "subscriptionEditor.namePlaceholder": "Např. Velká zeleninová bedýnka",
+  "subscriptionEditor.namePlaceholder": "Velká zeleninová bedýnka",
   "subscriptionEditor.numberOfDeliveries": "Od počtu odběrů",
   "subscriptionEditor.pricePerDelivery": "Cena za odběr ({{currency}})",
   "cancel": "Zrušit",
@@ -21,7 +21,7 @@
   "subscriptionsPage.about": "Komunitou Podporované Zemědělství je koncept, který se mimo jiné snaží propojit spotřebitele přímo s farmářem. Jeden ze způsobů kterým toho dosáhnout, je odebírání podílů produkce farmy (bedýnek). Podíly se nejčastěji odebírají jednou za týden, na předem domluveném odběrovém místě. Obecně platí, že čím více podílů si předplatíte, tím nižší cena za podíl.",
   "subscriptionsPage.about2": "Níže si můžete prohlédnout nabídku odběrů, v sekci Odběrová Místa si vybrat odběrové místo a v případě zájmu kontaktovat farmáře na jeden z kontaktů uvedených v sekci Farma.",
   "subscriptionsPage.subscriptionContentHeading": "(Možný) obsah",
-  "subscriptionsPage.subscriptionContentPlaceholder": "Brambory, Cibule, Mrkve, Řepa, Salát...",
+  "subscriptionEditor.contentPlaceholder": "Různá sezonní zelenina",
   "subscriptionsPage.subscriptionName": "Jméno odběru",
   "delete": "Smazat",
   "email": "Email",
