--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -8,7 +8,7 @@
   "addressLine1": "Street and house number",
   "deleteDialog.text": "Delete selected item?",
   "subscriptionEditor.heading": "Subscription Editor",
-  "subscriptionEditor.namePlaceholder": "Eg. Vegetables for 4",
+  "subscriptionEditor.namePlaceholder": "Vegetables for 4",
   "subscriptionEditor.numberOfDeliveries": "From number of deliveries",
   "subscriptionEditor.pricePerDelivery": "Price per delivery ({{currency}})",
   "cancel": "Cancel",
@@ -19,7 +19,7 @@
   "subscriptionsPage.about": "Community Supported Agriculture is a concept, which is among other things, trying to connect a consumer directly with a farmer. One method to achieve this, is to subscribe to deliveries of farm produce (subscriptions). Most common is a weekly subscription with handover on agreed pickup point. In general the more deliveries you prepay the lower the price per delivery.",
   "subscriptionsPage.about2": "Below you can see farm's subscription offerings, choose a pickup point in Pickup Points section and in case of interest contact the farmer through one of the contacts listed in Farm section.",
   "subscriptionsPage.subscriptionContentHeading": "(Possible) content",
-  "subscriptionsPage.subscriptionContentPlaceholder": "Beetroot, Carrots, Lettuce, Potatoes, Onions...",
+  "subscriptionEditor.contentPlaceholder": "Various seasonal vegetables",
   "subscriptionsPage.subscriptionName": "Subscription name",
   "delete": "Delete",
   "email": "Email",
