--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,52 +1,36 @@
 {
-  "production": "Produkce",
-  "addressLevel1Label": "Okres", 
-  "pricing": "Ceník",
-  "landingPage.contactDeveloper": "Nebo kontaktuje vývojáře",
-  "no": "Ne",
-  "yes": "Ano",
   "aboutFarm": "O Farmě",
+  "accommodation.heading": "Ubytování",
   "address": "Adresa",
+  "addressLevel1Label": "Okres", 
   "addressLine1": "Ulice a číslo popisné",
-  "deleteDialog.text": "Smazat vybranou položku?",
-  "subscriptionEditor.heading": "Editor Odběru",
-  "subscriptionEditor.namePlaceholder": "Velká zeleninová bedýnka",
-  "subscriptionEditor.numberOfDeliveries": "Od počtu odběrů",
-  "subscriptionEditor.pricePerDelivery": "Cena za odběr ({{currency}})",
+  "blog.heading": "Blog",
   "cancel": "Zrušit",
   "city": "Město",
   "contacts": "Kontakty",
   "continue": "Pokračovat",
   "createFarm": "Založ Farmu",
-  "subscriptionsPage.about": "Komunitou Podporované Zemědělství je koncept, který se mimo jiné snaží propojit spotřebitele přímo s farmářem. Jeden ze způsobů kterým toho dosáhnout, je odebírání podílů produkce farmy (bedýnek). Podíly se nejčastěji odebírají jednou za týden, na předem domluveném odběrovém místě. Obecně platí, že čím více podílů si předplatíte, tím nižší cena za podíl.",
-  "subscriptionsPage.about2": "Níže si můžete prohlédnout nabídku odběrů, v sekci Odběrová Místa si vybrat odběrové místo a v případě zájmu kontaktovat farmáře na jeden z kontaktů uvedených v sekci Farma.",
-  "subscriptionsPage.subscriptionContentHeading": "(Možný) obsah",
-  "subscriptionEditor.contentPlaceholder": "Různá sezonní zelenina",
-  "subscriptionsPage.subscriptionName": "Jméno odběru",
   "delete": "Smazat",
+  "deleteDialog.text": "Smazat vybranou položku?",
   "email": "Email",
+  "eshop.heading": "Eshop",
   "exampleFarmAlert": "Tato farma není skutečná, jedná se o ilustraci.",
   "farm": "Farma",
   "farmForm.isPickupPoint": "Odběry ze dvora",
   "farmForm.makeFarmPublic": "Zveřejnit farmu",
+  "farmLandingPage.openWebPage": "Otevřít stránku",
   "farmName": "Jméno farmy",
-  "farmPage.accommodation": "Ubytování",
-  "farmPage.blog": "Blog",
-  "farmPage.subscriptions": "Odběry",
-  "farmPage.eshop": "Eshop",
-  "farmPage.farmIsNotPublishedAlert": "Vaše farma není veřejně dostupná. Změnu lze provést v nastavení farmy.",
-  "farmPage.openWebPage": "Otevřít stránku",
-  "farmPage.photoGallery": "Fotogalerie",
-  "farmPage.reviews": "Říkají o nás",
-  "farmPage.switchToAdminMode": "Editovat",
-  "farmPage.switchToViewMode": "Náhled", 
-  "farmPage.volunteers": "Dobrovolníci",
-  "farmsPage.heading": "Najdi Farmu",
+  "farmPages.farmIsNotPublishedAlert": "Vaše farma není veřejně dostupná. Změnu lze provést v nastavení farmy.",
+  "farmPages.switchToAdminMode": "Editovat",
+  "farmPages.switchToViewMode": "Náhled", 
+  "farmPickupDayDefaultValue": "Dle domluvy",
   "farmsPage.deliversToHeading": "Odběrová místa v",
-  "farmsTable.deliversToPlaceholder": "Město / PSČ",
+  "farmsPage.heading": "Najdi Farmu",
   "farmsPage.producingLabel": "Produkuje",
+  "farmsTable.deliversToPlaceholder": "Město / PSČ",
   "firstName": "Jméno",
   "genericFailureMessage": "Něco se porouchalo. Zkuste opakovat akci později.",
+  "landingPage.contactDeveloper": "Nebo kontaktuje vývojáře",
   "landingPage.heading": "Lokální produkty přímo z farmy",
   "landingPage.howItWorks1": "Najdi farmu dle odběrového místa",
   "landingPage.howItWorks2": "Vyber produkty k odběru",
@@ -58,24 +42,27 @@
   "lastName": "Příjmení",
   "myFarm": "Moje Farma",
   "name": "Jméno",
+  "no": "Ne",
   "orders": "Objednávky",
   "password": "Heslo",
   "pc": "ks",
   "phoneNumber": "Telefonní číslo",
+  "photoGallery.heading": "Fotogalerie",
+  "pickupDayLabel": "Odběrový den",
+  "pickupDayPlaceholder": "Týdně/Ob týden ve čtvrtek od 10 do 16 hodin.",
   "pickupPointEditor.heading": "Odběrové místo",
   "pickupPoints": "Odběrová Místa",
   "pickupPointsPage.editDelete": "Editovat/Smazat",
-  "farmPickupDayDefaultValue": "Dle domluvy",
-  "pickupDayLabel": "Odběrový den",
-  "pickupDayPlaceholder": "Týdně/Ob týden ve čtvrtek od 10 do 16 hodin.",
   "postcode": "PSČ",
-  "subscriptionsTable.priceHeading": "Počet odběrů x Cena",
+  "pricing": "Ceník",
   "producing": "Produkujeme",
+  "production": "Produkce",
   "productTypes.dairy": "Mléčné výrobky",
   "productTypes.eggs": "Vejce",
   "productTypes.fruits": "Ovoce",
   "productTypes.meat": "Maso",
   "productTypes.vegetables": "Zelenina",
+  "reviews.heading": "Říkají o nás",
   "save": "Uložit",
   "signIn": "Přihlásit se",
   "signInPage.heading": "Přihlášení",
@@ -89,6 +76,22 @@
   "signUpPage.invalidEmail": "Neplatný email.",
   "signUpPage.newsletterCheckbox": "Chci novinky od FarmedBy na email.",
   "somethingWentWrong": "Něco se porouchalo",
+  "subscriptionEditor.contentPlaceholder": "Různá sezonní zelenina",
+  "subscriptionEditor.heading": "Editor Odběru",
+  "subscriptionEditor.namePlaceholder": "Velká zeleninová bedýnka",
+  "subscriptionEditor.numberOfDeliveries": "Od počtu odběrů",
+  "subscriptionEditor.pricePerDelivery": "Cena za odběr ({{currency}})",
+  "subscriptionsPage.howItWorks1": "Vytvoř objednávku",
+  "subscriptionsPage.howItWorks2": "Vyčkej na email od farmáře s platebními údaji",
+  "subscriptionsPage.howItWorks3": "Zaplať objednávku",
+  "subscriptionsPage.howItWorks4": "Vyčkej na email s prvním datem závozu",
+  "subscriptionsPage.howItWorks5": "Pravidelně vyzvedávej",
+  "subscriptionsPage.heading": "Předplatné",
+  "subscriptionsPage.subscriptionContentHeading": "(Možný) obsah",
+  "subscriptionsPage.subscriptionName": "Jméno odběru",
+  "subscriptionsTable.priceHeading": "Počet odběrů x Cena",
   "tryItLater": "Zkuste akci opakovat později.",
-  "webAddress": "Webová adresa"
+  "volunteers.heading": "Dobrovolníci",
+  "webAddress": "Webová adresa",
+  "yes": "Ano"
 }
