--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,50 +1,36 @@
 {
-  "production": "Produkce",
-  "addressLevel1Label": "State / Province / District", 
-  "pricing": "Pricing",
-  "landingPage.contactDeveloper": "Or contact the developer",
   "aboutFarm": "About Farm",
+  "accommodation.heading": "Accommodation",
   "address": "Address",
+  "addressLevel1Label": "State / Province / District", 
   "addressLine1": "Street and house number",
-  "deleteDialog.text": "Delete selected item?",
-  "subscriptionEditor.heading": "Subscription Editor",
-  "subscriptionEditor.namePlaceholder": "Vegetables for 4",
-  "subscriptionEditor.numberOfDeliveries": "From number of deliveries",
-  "subscriptionEditor.pricePerDelivery": "Price per delivery ({{currency}})",
+  "blog.heading": "Blog",
   "cancel": "Cancel",
   "city": "City",
   "contacts": "Contacts",
   "continue": "Continue",
   "createFarm": "Create Farm",
-  "subscriptionsPage.about": "Community Supported Agriculture is a concept, which is among other things, trying to connect a consumer directly with a farmer. One method to achieve this, is to subscribe to deliveries of farm produce (subscriptions). Most common is a weekly subscription with handover on agreed pickup point. In general the more deliveries you prepay the lower the price per delivery.",
-  "subscriptionsPage.about2": "Below you can see farm's subscription offerings, choose a pickup point in Pickup Points section and in case of interest contact the farmer through one of the contacts listed in Farm section.",
-  "subscriptionsPage.subscriptionContentHeading": "(Possible) content",
-  "subscriptionEditor.contentPlaceholder": "Various seasonal vegetables",
-  "subscriptionsPage.subscriptionName": "Subscription name",
   "delete": "Delete",
+  "deleteDialog.text": "Delete selected item?",
   "email": "Email",
+  "eshop.heading": "Eshop",
   "exampleFarmAlert": "This farm is not real it's for illustrative purposes only.",
   "farm": "Farm",
   "farmForm.isPickupPoint": "Use farm as pickup point",
   "farmForm.makeFarmPublic": "Make farm public",
+  "farmLandingPage.openWebPage": "Open web page",
   "farmName": "Farm name",
-  "farmPage.accommodation": "Accommodation",
-  "farmPage.blog": "Blog",
-  "farmPage.subscriptions": "Subscriptions",
-  "farmPage.eshop": "Eshop",
-  "farmPage.farmIsNotPublishedAlert": "Your farm is not publicly available. You can change it in farm settings.",
-  "farmPage.openWebPage": "Open web page",
-  "farmPage.photoGallery": "Photo Gallery",
-  "farmPage.reviews": "They say about us",
-  "farmPage.switchToAdminMode": "Edit",
-  "farmPage.switchToViewMode": "View", 
-  "farmPage.volunteers": "Volunteers",
-  "farmsPage.heading": "Find Farm",
+  "farmPages.farmIsNotPublishedAlert": "Your farm is not publicly available. You can change it in farm settings.",
+  "farmPages.switchToAdminMode": "Edit",
+  "farmPages.switchToViewMode": "View", 
+  "farmPickupDayDefaultValue": "By agreement.",
   "farmsPage.deliversToHeading": "Pickup points in",
-  "farmsTable.deliversToPlaceholder": "City / Postcode",
+  "farmsPage.heading": "Find Farm",
   "farmsPage.producingLabel": "Producing",
+  "farmsTable.deliversToPlaceholder": "City / Postcode",
   "firstName": "First name",
   "genericFailureMessage": "Something's wrong. Please try again later.",
+  "landingPage.contactDeveloper": "Or contact the developer",
   "landingPage.heading": "Local produce directly from a farm",
   "landingPage.howItWorks1": "Find farm by pickup point",
   "landingPage.howItWorks2": "Select farm produce subscription",
@@ -57,25 +43,26 @@
   "myFarm": "My Farm",
   "name": "Name",
   "no": "No",
-  "yes": "Yes",
   "orders": "Orders",
   "password": "Password",
   "pc": "pc",
   "phoneNumber": "Phone number",
+  "photoGallery.heading": "Photo Gallery",
+  "pickupDayLabel": "Pickup day",
+  "pickupDayPlaceholder": "Weekly/Biweekly on Wednesday from 10am to 4pm.",
   "pickupPointEditor.heading": "Pickup Point",
   "pickupPoints": "Pickup Points",
   "pickupPointsPage.editDelete": "Edit/Delete",
-  "farmPickupDayDefaultValue": "By agreement.",
-  "pickupDayLabel": "Pickup day",
-  "pickupDayPlaceholder": "Weekly/Biweekly on Wednesday from 10am to 4pm.",
   "postcode": "Postcode",
-  "subscriptionsTable.priceHeading": "Deliveries x Price",
+  "pricing": "Pricing",
   "producing": "Producing",
+  "production": "Produkce",
   "productTypes.dairy": "Dairy",
   "productTypes.eggs": "Eggs",
   "productTypes.fruits": "Fruits",
   "productTypes.meat": "Meat",
   "productTypes.vegetables": "Vegetables",
+  "reviews.heading": "They say about us",
   "save": "Save",
   "signIn": "Sign in",
   "signInPage.heading": "Sign in",
@@ -89,6 +76,22 @@
   "signUpPage.invalidEmail": "Invalid email",
   "signUpPage.newsletterCheckbox": "Subscribe to FarmedBy newsletter",
   "somethingWentWrong": "Something went wrong",
+  "subscriptionEditor.contentPlaceholder": "Various seasonal vegetables",
+  "subscriptionEditor.heading": "Subscription Editor",
+  "subscriptionEditor.namePlaceholder": "Vegetables for 4",
+  "subscriptionEditor.numberOfDeliveries": "From number of deliveries",
+  "subscriptionEditor.pricePerDelivery": "Price per delivery ({{currency}})",
+  "subscriptionsPage.howItWorks1": "Create an order",
+  "subscriptionsPage.howItWorks2": "Wait for an email from the farmer with payment information",
+  "subscriptionsPage.howItWorks3": "Pay for the order",
+  "subscriptionsPage.howItWorks4": "Wait for an email with first delivery day",
+  "subscriptionsPage.howItWorks5": "Pick up regular deliveries",
+  "subscriptionsPage.heading": "Subscriptions",
+  "subscriptionsPage.subscriptionContentHeading": "(Possible) content",
+  "subscriptionsPage.subscriptionName": "Subscription name",
+  "subscriptionsTable.priceHeading": "Deliveries x Price",
   "tryItLater": "Try it again later.",
-  "webAddress": "Web address"
+  "volunteers.heading": "Volunteers",
+  "webAddress": "Web address",
+  "yes": "Yes"
 }
