implementing subscription order form

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -88,8 +88,8 @@
   "subscriptionsPage.howItWorks5": "Pravidelně vyzvedávej",
   "subscriptionsPage.heading": "Předplatné",
   "subscriptionsPage.subscriptionContentHeading": "(Možný) obsah",
-  "subscriptionsPage.subscriptionName": "Jméno odběru",
-  "subscriptionsTable.priceHeading": "Počet odběrů x Cena",
+  "subscriptionsPage.subscriptionName": "Jméno předplatného",
+  "subscriptionsTable.pricing": "Ceník",
   "tryItLater": "Zkuste akci opakovat později.",
   "volunteers.heading": "Dobrovolníci",
   "webAddress": "Webová adresa",
