--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -89,7 +89,7 @@
   "subscriptionsPage.heading": "Subscriptions",
   "subscriptionsPage.subscriptionContentHeading": "(Possible) content",
   "subscriptionsPage.subscriptionName": "Subscription name",
-  "subscriptionsTable.priceHeading": "Deliveries x Price",
+  "subscriptionsTable.pricing": "Pricing",
   "tryItLater": "Try it again later.",
   "volunteers.heading": "Volunteers",
   "webAddress": "Web address",
